--- a/PatternSkin/pub/System/PatternSkin/colors.css
+++ b/PatternSkin/pub/System/PatternSkin/colors.css
@@ -322,6 +322,9 @@ table.foswikiFormTable th.foswikiFormTableHRow font {
 .foswikiFormStep {
    border-color:#e2e2e2;
 }
+.foswikiFormStep h2 {
+   color:#2989bb;
+}
 .foswikiFormStep h3,
 .foswikiFormStep h4 {
    color:#d1400e;
@@ -443,7 +446,7 @@ a:hover .foswikiAccessKey {
 
 .patternTopicActions {
    background-color:#2989bb;
-   color:#777;
+   color:#bbb;
 }
 .patternTopicAction {
    border-color:#fff;
@@ -477,7 +480,10 @@ a:hover .foswikiAccessKey {
    color:#777;
 }
 .patternSigLine {
-   color:#777;
+   color:#777;	
+}
+.patternEditTopic {
+	background:#eef7fa;
 }
 .patternToolBar a:link .foswikiAccessKey,
 .patternToolBar a:visited .foswikiAccessKey {
@@ -488,9 +494,6 @@ a:hover .foswikiAccessKey {
    background-color:transparent;
    color:inherit;
    border-color:#666;
-}
-.patternSaveHelp {
-   background-color:#fff;
 }
 
 /* WebSearch, WebSearchAdvanced */
