--- a/PatternSkin/templates/renamebase.pattern.tmpl
+++ b/PatternSkin/templates/renamebase.pattern.tmpl
@@ -1,4 +1,5 @@
 %TMPL:INCLUDE{"renamebase"}%
+%TMPL:DEF{"logo"}%%TMPL:END%
 
 
 %TMPL:DEF{"script:skintemplate"}%<script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/JavascriptFiles/foswiki_renamebase.js"></script>%TMPL:END%
@@ -7,8 +8,7 @@
 %TMPL:DEF{"bodyclassname"}%patternNoViewPage patternRenamePage%TMPL:END%
 
 
-%TMPL:DEF{"toolbar"}%<div class="patternTop">%TWISTYBUTTON{id="renamehelp" mode="div" remember="on" link="%MAKETEXT{"Show help"}%" showimgleft="%ICONURLPATH{toggleopen}%"
-hideimgleft="%ICONURLPATH{toggleclose}%"}%</div><!--//patternTop-->%TMPL:END%
+%TMPL:DEF{"toolbar"}%<div class="patternTop">%TWISTYBUTTON{id="renamehelp" mode="div" remember="on" showlink="<h3>&#9658; %MAKETEXT{"Show help"}%</h3>" hidelink="<h3>&#9660; %MAKETEXT{"Show help"}%</h3>" linkclass="foswikiButton patternTwistyButton"}%</div><!--//patternTop-->%TMPL:END%
 
 
 %TMPL:DEF{"pagehelp"}%%TWISTYTOGGLE{id="renamehelp" mode="div" remember="on" noscript="hide"}%<div class="foswikiHelp">%TMPL:P{"notes"}%</div>%ENDTWISTYTOGGLE%%TMPL:END%
