--- a/core/templates/addform.tmpl
+++ b/core/templates/addform.tmpl
@@ -1,1 +1,1 @@
-%{ This is a default template }%<input class="foswikiButton" type="submit" name="action_addform" value="%MAKETEXT{"Add form"}%" />
+%{ This is a default template }%<input class="foswikiButton foswikiAddFormButton" type="submit" name="action_addform" value="%MAKETEXT{"Add form"}%" />
