--- a/core/templates/oopschangelanguage.tmpl
+++ b/core/templates/oopschangelanguage.tmpl
@@ -9,7 +9,7 @@
 
 %TMPL:DEF{"content"}%
 
-%MAKETEXT{"TWiki's user interface is available in several languages. If you want to change the language for this session, choose one of the following and hit \"Change language\". Otherwise, follow the \"Cancel\" link on the bottom of the page to return to the previous topic."}%
+%MAKETEXT{"Foswiki's user interface is available in several languages. If you want to change the language for this session, choose one of the following and hit \"Change language\". Otherwise, follow the \"Cancel\" link on the bottom of the page to return to the previous topic."}%
 
 <center>
 <form action="%SCRIPTURLPATH{"oops"}%/%WEB%/%TOPIC%" method="get">
