--- a/core/templates/oopssaveerr.tmpl
+++ b/core/templates/oopssaveerr.tmpl
@@ -1,6 +1,6 @@
 %{ This is a default template }%%{
 
-    NOTE: not used by TWiki, but retained for compatibility with some plugins
+    NOTE: not used by *Wiki, but retained for compatibility with some plugins
     that use it.
 }%
 %TMPL:INCLUDE{"oops"}%
