Item510: made WYSIWYG bg white (pattern skin fix)
git-svn-id: http://svn.foswiki.org/trunk@1444 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/colors.css
+++ b/PatternSkin/pub/System/PatternSkin/colors.css
@@ -42,7 +42,8 @@ html body {
    background-color:#f5f5f5;
    color:#000;
 }
-html body.patternEditPage {
+html body.patternEditPage,
+.mceContentBody {
    background-color:#fff;
 }
 /* be kind to netscape 4 that doesn't understand inheritance */
