--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -79,7 +79,7 @@
 %TMPL:DEF{"canceltopicaction"}%[[%WEB%.%TOPIC%][%MAKETEXT{"Cancel"}%]]%TMPL:END%
 %TMPL:DEF{"oktopicaction"}%[[%WEB%.%TOPIC%][%MAKETEXT{"OK"}%]]%TMPL:END%
 %TMPL:DEF{"gobacktopicaction"}%<a href="#" onclick="history.go(-1); return false;">%MAKETEXT{"Go back"}%</a>%TMPL:END%
-%TMPL:DEF{"topicaction"}%<div class="foswikiTopicAction" >%TMPL:P{"topicactionbuttons"}%</div>%TMPL:END%
+%TMPL:DEF{"topicaction"}%<div class="foswikiTopicActions" >%TMPL:P{"topicactionbuttons"}%</div>%TMPL:END%
 %TMPL:DEF{"topicactionbuttons"}%%TMPL:P{"canceltopicaction"}%%TMPL:END%
 
 %TMPL:DEF{"topicinfo"}%<div class="foswikiTopicInfo" style="background:%WEBBGCOLOR%">
