Item5944: increase side padding on textareas to make placing cursor easier
git-svn-id: http://svn.foswiki.org/trunk@1535 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/style.css
+++ b/PatternSkin/pub/System/PatternSkin/style.css
@@ -164,7 +164,7 @@ select {
 	font-size:100%;
 }
 .foswikiTextarea {
-	padding:1px;
+	padding:1px 4px;
 }
 .foswikiSubmit,
 .foswikiSubmitDisabled,
@@ -1115,4 +1115,8 @@ tr.foswikiDiffDebug td {
 }
 .foswikiDiffLineNumberHeader {
 	padding:.3em 0;
+}
+
+.mceContentBody {
+    padding: 1px 4px;
 }
