Item4906: Finish the problem with the WikiWord inside () problem This could probably also be triggered by other combinations so best to fix it. I changed the literal fix from earlier to using noautolink. It is more clean and risk free that way
git-svn-id: http://svn.foswiki.org/trunk@1572 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/templates/attach.pattern.tmpl
+++ b/PatternSkin/templates/attach.pattern.tmpl
@@ -37,8 +37,8 @@
 
 %TMPL:P{"previous"}%%IF{"$ATTACHFILESIZELIMIT > 0" then="%MAKETEXT{"Upload up to [_1] KB." args="%ATTACHFILESIZELIMIT%"}%"}%
 
-<input type="hidden" name="filename" value="%FILENAME%" /> 
-<input class="foswikiInputField" type="file" name="filepath" value="%FILEPATH%" size="70" />
+<noautolink><input type="hidden" name="filename" value="%FILENAME%" /> 
+<input class="foswikiInputField" type="file" name="filepath" value="%FILEPATH%" size="70" /></noautolink>
 </div><!-- /foswikiFormStep-->%TMPL:END%
 
 %TMPL:DEF{"comment"}%<div class="foswikiFormStep">
