--- a/core/templates/attach.tmpl
+++ b/core/templates/attach.tmpl
@@ -16,8 +16,8 @@
   <td align="right">
    %MAKETEXT{"Attach new file"}%
   </td><td>
-   <input type="hidden" name="filename" value="%FILENAME%" /> 
-   <input type="file" name="filepath" value="%FILEPATH%" size="50" />
+   <noautolink><input type="hidden" name="filename" value="%FILENAME%" />
+   <input type="file" name="filepath" value="%FILEPATH%" size="50" /></noautolink>
   </td>
  </tr>%TMPL:END%
 
