Item568: When switching to other languages, the top buttons "Edit" and "Attach" do not display correctly the defined access key in some languages I solved this by finding the svn checkin that goofed it, finding the relevant change, and then experiment which line caused it. I had to add re-add one removed section from style.css and apply only one of the styles from the removed code to fix the issue. Please if you know CSS review the change.
git-svn-id: http://svn.foswiki.org/trunk@1578 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/style.css
+++ b/PatternSkin/pub/System/PatternSkin/style.css
@@ -812,6 +812,9 @@ html>body #patternSideBarContents li { /* Mozilla */
 .patternToolBar span a:active {
 	outline:none;
 }
+.patternToolBar span.foswikiAccessKey { 
+	float:none; 
+}
 .patternToolBar span s,
 .patternToolBar span strike {
 	text-decoration:none;
