Item539: move compatible sidebar padding to twiki theme
git-svn-id: http://svn.foswiki.org/trunk@1590 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/column_twiki.css
+++ b/PatternSkin/pub/System/PatternSkin/column_twiki.css
@@ -9,3 +9,7 @@ compatible bar for TWiki installations
 	width:14em;
 	margin-left:-14em;
 }
+#patternSideBarContents {
+	padding-right:1em;
+	padding-left:1em;
+}
