--- a/PatternSkin/pub/System/PatternSkin/style.css
+++ b/PatternSkin/pub/System/PatternSkin/style.css
@@ -636,6 +636,7 @@ a:hover .foswikiAccessKey {
 }
 #patternMainContents,
 #patternBottomBarContents,
+#patternSideBarContents,
 #patternTopBarContents {
 	padding-right:2em;
 	padding-left:2em;
