Item539: make the default side bar wider
git-svn-id: http://svn.foswiki.org/trunk@1608 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/column_twiki.css
+++ b/PatternSkin/pub/System/PatternSkin/column_twiki.css
@@ -13,3 +13,7 @@ compatible bar for TWiki installations
 	padding-right:1em;
 	padding-left:1em;
 }
+#patternSideBarContents {
+	padding-left:1em;
+	padding-right:1em;
+}
