Item8039:    * fixes for foswiki/compat    * fixed %BUTTON click event for IE6/7 (that's why you weren't able to save in NatEdit)    * adding a hidden input submit field to %BUTTONS of type submit    * removed famfamfam icons; made icon topic configurable instead, defaulting to FamFamFamSilkIcons    * yet another tabpane fix for IE6/7
git-svn-id: http://svn.foswiki.org/trunk@1813 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/TWiki/JQueryPlugin/jquery.tabpane.css
+++ b/JQueryPlugin/pub/TWiki/JQueryPlugin/jquery.tabpane.css
@@ -25,7 +25,7 @@ ul.jqTabGroup {
   margin:0px !important;
   padding:0px !important;
   list-style:none;
-  /*border-top:1px solid white;*/ /* IE6+IE7 fix */
+  padding-top:1px; /* IE6+IE7 fix */
 }
 ul.jqTabGroup li {
   background-color: transparent;
@@ -38,6 +38,7 @@ ul.jqTabGroup li {
   margin:0px 4px -1px 0px !important;
   height:29px;
   line-height:100%;
+  list-style:none !important;
 }
 ul.jqTabGroup a:active,
 ul.jqTabGroup a:hover,
