Item863: less borders; use foswiki.org side menu style
git-svn-id: http://svn.foswiki.org/trunk@2162 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/print.css
+++ b/PatternSkin/pub/System/PatternSkin/print.css
@@ -61,6 +61,7 @@ body.patternPrintPage,
 }
 .patternPrintPage #patternBottomBar {
 	border:none;
+	padding:1em 0;
 }
 .patternPrintPage .patternTopicFooter {
 	margin:1em 0 0 0;
