--- a/PatternSkin/pub/System/PatternSkin/colors.css
+++ b/PatternSkin/pub/System/PatternSkin/colors.css
@@ -39,7 +39,7 @@
 /* GENERAL HTML ELEMENTS */
 
 html body {
-   background-color:#f5f5f5;
+   background-color:#e2e2e2;
    color:#000;
 }
 html body.patternEditPage,
@@ -75,11 +75,9 @@ h2, h3, h4, h5, h6 {
    color:#d1400e;
 }
 h2 {
-   border-color:#e2e2e2;
+   border-color:#d1400e;
 }
-h3, h4, h5, h6 {
-   border-color:#e2e2e2;
-}
+
 /* to override old Render.pm coded font color style */
 .foswikiNewLink font {
    color:inherit;
@@ -344,9 +342,6 @@ table.foswikiFormTable th.foswikiFormTableHRow font {
 .foswikiNotification {
    background-color:#fff0c4;
 }
-.foswikiNotification {
-   border:2px solid #ffdf4c;
-}
 #foswikiLogin .patternLoginNotification {
    background-color:#fff;
    border-color:#f00;
@@ -435,10 +430,6 @@ a:hover .foswikiAccessKey {
 }
 #patternSideBarContents a:hover {
    color:#fff;
-}
-#patternSideBarContents .patternLeftBarPersonal,
-#patternSideBarContents .patternWebIndicator {
-	border-color:#dadada;
 }
 #patternSideBarContents b,
 #patternSideBarContents strong {
@@ -785,26 +776,4 @@ a.foswikiButton:active {
 }
 .patternButtonShrink:active {
    background-position:16px -84px;
-}
-.foswikiBroadcastMessage {
-   background-image:url(background_alert.gif);
-   background-repeat:repeat-x;
-}
-
-/* common settings */
-.patternLeftBarPersonal li,
-li.patternLogOut,
-li.patternLogIn {
-   padding-left:13px;
-   background-position:0 .4em;
-   background-repeat:no-repeat;
-}
-.patternLeftBarPersonal li {
-   background-image:url(bullet-personal_sidebar.gif);
-}
-.patternLeftBarPersonal li.patternLogOut {
-   background-image:url(bullet-lock.gif);
-}
-.patternLeftBarPersonal li.patternLogIn {
-   background-image:url(bullet-lock.gif);
 }
