--- a/PatternSkin/pub/System/PatternSkin/theme_twiki.css
+++ b/PatternSkin/pub/System/PatternSkin/theme_twiki.css
@@ -39,8 +39,7 @@ Overrides global settings in layout.css, style.css and colors.css
 #patternClearHeaderCenter,
 #patternClearHeaderLeft,
 #patternClearHeaderRight,
-#patternTopBarContentsOuter,
-#patternTopBarContents {
+#patternTopBarContentsOuter {
 	height:64px;
 	overflow:hidden;
 }
