Item863: further tweaking of borders and sidebar
git-svn-id: http://svn.foswiki.org/trunk@2164 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/colors.css
+++ b/PatternSkin/pub/System/PatternSkin/colors.css
@@ -75,7 +75,7 @@ h2, h3, h4, h5, h6 {
    color:#d1400e;
 }
 h2 {
-   border-color:#d1400e;
+   border-color:#ccc;
 }
 
 /* to override old Render.pm coded font color style */
