--- a/PatternSkin/pub/System/PatternSkin/style.css
+++ b/PatternSkin/pub/System/PatternSkin/style.css
@@ -71,6 +71,7 @@ blockquote {
 
 /* Text */
 h1 {
+	margin:0 0 .5em 0;
 }
 h1, h2, h3, h4, h5, h6 {
 	font-weight:normal;
@@ -84,14 +85,17 @@ h5 { font-size:110%; font-weight:bold; }
 h6 { font-size:95%; font-weight:bold; }
 h2, h3, h4, h5, h6 {
 	display:block;
-	padding:.2em 0;
-	margin:1em 0 .35em 0;
+	/* give header a background color for easy scanning:*/
+	padding:.25em 10px;
+	margin:1em -10px .35em -10px;
 	height:auto;	
 }
+/*
 h2 {
-	border-width:1px;
-	border-style:none none solid none;
+	border-width:0 0 1px 0;
+	border-style:solid;
 }
+*/
 h1.patternTemplateTitle {
 	font-size:170%;
 	text-align:center;
@@ -461,7 +465,7 @@ table.foswikiFormTable th.foswikiFormTableHRow a:visited {
 	background:none;
 }
 .foswikiFormStep h2 {
-	font-size:125%;
+	font-size:130%;
 	font-weight:bold;
 }
 .foswikiFormStep h3 {
@@ -543,6 +547,8 @@ table.foswikiFormTable th.foswikiFormTableHRow a:visited {
 }
 .foswikiNotification {
 	margin:1em 0;
+	border-style:solid;
+	border-width:2px;
 }
 .foswikiBroadcastMessage {
 	margin:0 0 1.25em 0;
@@ -552,7 +558,7 @@ table.foswikiFormTable th.foswikiFormTableHRow a:visited {
 	padding:1em;
 	margin:.25em 0 0 0;
 	border-style:solid;
-	border-width:1px;
+	border-width:2px;
 }
 .foswikiHelp ul {
 	margin:0;
@@ -623,6 +629,8 @@ a:hover .foswikiAccessKey {
 }
 #patternSideBarContents {
 	margin:0 0 1em 0;
+	padding-right:.5em;
+	padding-left:1em;
 }
 #patternMainContents,
 #patternBottomBarContents,
@@ -675,28 +683,58 @@ a:hover .foswikiAccessKey {
 .patternNoViewPage .patternTop {
 	font-size:94%;
 }
-#patternSideBarContents {
-	margin-top:-3px; /* to encounter for 3 px padding for links */
-}
 #patternSideBarContents img {
 	margin:0 3px 0 0;
 	vertical-align:text-bottom;
 }
 #patternSideBarContents a:link,
 #patternSideBarContents a:visited {
+	text-decoration:none;
+}
+/*
+#patternSideBarContents .patternLeftBarPersonal a:link,
+#patternSideBarContents .patternLeftBarPersonal a:visited {
 	text-decoration:underline;
 }
-
+#patternSideBarContents .patternLeftBarPersonal ul a:link,
+#patternSideBarContents .patternLeftBarPersonal ul a:visited {
+	text-decoration:none;
+}
+#patternSideBarContents .patternLeftBarPersonal ul a:hover {
+	text-decoration:underline;
+}
+*/
 #patternSideBarContents ul {
 	padding:0;
 	margin:0;
 	list-style:none;
 }
+#patternSideBarContents,
+#patternSideBarContents ul,
+#patternSideBarContents li {
+	line-height:1.35em;
+}
+#patternSideBarContents h2 {
+	border:none;
+	background-color:transparent;
+}
 #patternSideBarContents .patternLeftBarPersonal,
 #patternSideBarContents .patternWebIndicator {
 	height:1%; /* for IE */
 	width:100%; /* for IE */
+	padding:0 1em .75em 1em;
+	margin:0 -1em .75em -1em; /*S6*/
+	border-style:none none solid none;
+	border-width:1px;
 }
+/*
+#patternSideBarContents ul li a:link,
+#patternSideBarContents ul li a:visited {
+	display:block;
+	margin:0 -1em 0 -1em;
+	padding:.2em 1em;
+}
+*/
 .patternWebIndicator a {
 	font-size:1.1em;
 	font-weight:bold;
@@ -704,47 +742,6 @@ a:hover .foswikiAccessKey {
 .patternLeftBarPersonalContent {
 	padding:1em 0 0 0;
 }
-#patternSideBarContents {
-	padding-left:16px;
-	padding-right:12px;
-}
-#patternSideBarContents li {
-	margin:0;
-}
-#patternSideBarContents h2 {
-	font-size:100%;
-	font-weight:bold;
-	line-height:2em;
-	margin:0;
-	border:none;
-	background-color:transparent;
-
-}
-#patternSideBarContents ul {
-	margin:0;
-	padding:0;
-}
-#patternSideBarContents ul li {
-	padding:1px 0;
-}
-#patternSideBarContents ul li a,
-#patternSideBarContents h2 {
-	display:block;
-	margin:0 -12px 0 -16px;
-	padding:3px 12px 3px 16px;
-}
-#patternSideBarContents ul li a:link,
-#patternSideBarContents ul li a:visited {
-	text-decoration:none;
-}
-#patternSideBarContents ul li a:hover {
-	text-decoration:none;
-}
-#patternSideBarContents .patternLeftBarPersonal {
-	margin:0 -12px;
-	padding:6px 12px 6px 12px;
-}
-
 #patternSideBarContents li {
 	overflow:hidden;
 }
@@ -1125,9 +1122,3 @@ tr.foswikiDiffDebug td {
 .mceContentBody {
     padding: 1px 4px;
 }
-
-
-
-
-
-
