--- a/PatternSkin/pub/System/PatternSkin/theme_foswiki_noframe.css
+++ b/PatternSkin/pub/System/PatternSkin/theme_foswiki_noframe.css
@@ -21,7 +21,8 @@ Overrides global settings in layout.css, style.css and colors.css
 #patternClearHeaderCenter,
 #patternClearHeaderLeft,
 #patternClearHeaderRight,
-#patternTopBarContentsOuter {
+#patternTopBarContentsOuter,
+#patternTopBarContents {
 	height:90px; /* top bar height; make room for header columns */
 	overflow:hidden;
 }
