--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -109,10 +109,4 @@
 %TMPL:DEF{"templatestyle"}%%TMPL:END%
 %{ title string in page: }%
 %TMPL:DEF{"pagetitle"}%%TMPL:P{"webaction"}%%TMPL:END%
-%TMPL:DEF{"pagetitlestylewrapper"}%<h1>%TMPL:P{"pagetitle"}%</h1>%TMPL:END%
-
-%TMPL:P{"htmldoctype"}%
-%TMPL:P{"head"}%
-%TMPL:P{"bodystart"}%
-%TMPL:P{"main"}%
-%TMPL:P{"bodyend"}%
+%TMPL:DEF{"pagetitlestylewrapper"}%<h1>%TMPL:P{"pagetitle"}%</h1>%TMPL:END%%TMPL:P{"htmldoctype"}%%TMPL:P{"head"}%%TMPL:P{"bodystart"}%%TMPL:P{"main"}%%TMPL:P{"bodyend"}%
