--- a/TwistyPlugin/templates/twistyplugin.dojo.tmpl
+++ b/TwistyPlugin/templates/twistyplugin.dojo.tmpl
@@ -1,6 +1,6 @@
 %TMPL:INCLUDE{twistyplugin}%
 
-%TMPL:DEF{twisty:header}%DOJO<style type="text/css" media="all">
+%TMPL:DEF{twisty:header}%<style type="text/css" media="all">
 @import url("%PUBURL%/%SYSTEMWEB%/TwistyContrib/twist.css");
 </style>
 <!-- style type="text/css">
