--- a/TwistyPlugin/templates/twistyplugin.jquery.tmpl
+++ b/TwistyPlugin/templates/twistyplugin.jquery.tmpl
@@ -1,6 +1,6 @@
 %TMPL:INCLUDE{twistyplugin}%
 
-%TMPL:DEF{twisty:header}%JQUERY<style type="text/css" media="all">
+%TMPL:DEF{twisty:header}%<style type="text/css" media="all">
 @import url("%PUBURL%/%SYSTEMWEB%/TwistyPlugin/twisty.jquery.css");
 </style>
 <script type="text/javascript" src="%PUBURL%/%SYSTEMWEB%/TwistyPlugin/twisty.jquery.js"></script>
