Item989: remove span
git-svn-id: http://svn.foswiki.org/trunk@2361 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/viewprint.tmpl
+++ b/core/templates/viewprint.tmpl
@@ -10,7 +10,7 @@
 %TMPL:DEF{"topicpathseparator"}%<span class='foswikiSeparator'>&nbsp;&gt;&nbsp;</span>%TMPL:END%
 
 %TMPL:DEF{"topicinfo"}%---
-%MAKETEXT{"This topic:"}% <nop>%WEB%%META{"parent" prefix="%TMPL:P{"topicpathseparator"}%" suffix=""}%%TMPL:P{"topicpathseparator"}%%TOPIC%</span> %BR%
+%MAKETEXT{"This topic:"}% <nop>%WEB%%META{"parent" prefix="%TMPL:P{"topicpathseparator"}%" suffix=""}%%TMPL:P{"topicpathseparator"}%%TOPIC% %BR%
 %MAKETEXT{"Topic revision:"}% %REVINFO%%TMPL:END%
 
 
