--- a/core/templates/edit.tmpl
+++ b/core/templates/edit.tmpl
@@ -42,7 +42,8 @@
 <input type="hidden" name="forcenewrevision" value="%URLPARAM{"forcenewrevision"}%" />
 <input type="hidden" name="rev" value="%URLPARAM{"rev"}%" />
 <input type="hidden" name="cmd" value="%CMD%" />
-<input type="hidden" name="nowysiwyg" value="%URLPARAM{"nowysiwyg"}%" />%TMPL:END%
+<input type="hidden" name="nowysiwyg" value="%URLPARAM{"nowysiwyg"}%" />
+<input type="hidden" name="action" value="%URLPARAM{"action"}%" />%TMPL:END%
 
 
 %TMPL:DEF{"sig"}%<div><div class="foswikiLeft"><label for="sig" class="foswikiGrayText">%MAKETEXT{"Your signature to copy/paste:"}%&nbsp;&nbsp;</label><input class="foswikiInputFieldReadOnly" size="41" name="sig" type="text" readonly="readonly" title='%MAKETEXT{"Select, copy and paste your signature text to the bottom of your entry"}%' id="sig" value="-- <nop>%WIKIUSERNAME% - %DATE%" /></div><br class="foswikiClear"><!--/foswikiLeft--></div>%TMPL:END%
